--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "modern-normalize": "^0.7.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-loader-spinner": "^3.1.14",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "uuid": "^8.2.0"
   },
   "scripts": {
@@ -50,6 +52,6 @@
     "lint-staged": "^10.2.11",
     "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-logger": "^3.0.6"
   }
 }
